probleme enregistrement inscription regle

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,15 +1,32 @@
 {
   "api": {
     "reclamationuit": {
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "reclamationuitf9c379a3"
+        }
+      ],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [],
+          "additionalAuthenticationProviders": [
+            {
+              "apiKeyConfig": {
+                "apiKeyExpirationDate": "2025-08-05T14:18:32.103Z",
+                "apiKeyExpirationDays": 7,
+                "description": "youshost"
+              },
+              "authenticationType": "API_KEY"
+            }
+          ],
           "defaultAuthentication": {
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
-            },
-            "authenticationType": "API_KEY"
+            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+            "userPoolConfig": {
+              "userPoolId": "authreclamationuitf9c379a3"
+            }
           }
         }
       },
