--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   amplify_api: ^2.0.0
   amplify_flutter: ^2.0.0
   amplify_auth_cognito: ^2.0.0
+  provider: ^6.0.5
   another_flushbar: ^1.10.30
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
