--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   amplify_auth_cognito: ^2.0.0
   provider: ^6.0.5
   another_flushbar: ^1.10.30
+  file_picker: ^8.0.0   # ✅ ajoute cette ligne
+
+  amplify_storage_s3: ^2.0.0
+
+  amplify_datastore_plugin_interface: ^2.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
